@@ -1,4 +1,4 @@
-$Id: History,v 1.37 2001-09-10 10:27:18 johna Exp $
+$Id: History,v 1.38 2002-10-23 12:08:16 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,14 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+23rd October 2002  John Allison
+- G4Colour class description corrected.
+- G4VisAttributes comments slightly improved.
+- G4AttDef and G4AttValue headers changed to follow G4 conventions.
+
+27th September 2002  Joseph Perl
+- Added first versions of headers for G4AttDef and G4AttValue.
 
 10th September 2001  John Allison  (greps-V03-02-04)
 - Added G4Scale::GuidanceString.
